# wolf3d-reimpl-cpp

./: .gitignore  CMakeLists.txt  DoorManager.h  GameData.h  GameEngine.h  MapFile.h  MapManager.h  MultimediaManager.h  PlayerManager.h  README.md  Renderer.h  Tile.h  camera.h  constants.h  csv.h  dda.h  door_manager.h  game_data.h  game_engine.h  global.h  input_manager.h  input_parser.h  inputs.h  ivec2.h  main.cpp  map.csv  map.h  map.txt  map_file.h  map_manager.h  misc.h  multimedia_manager.h  player.h  player_manager.h  ray.h  renderer.h  tile.h  updater.h  vec2.h
assets/: map.csv
src/: CMakeLists.txt  GameData.h  GameEngine.h  InputParser.h  Inputs.h  MapFile.h  Renderer.h  Tile.h  main.cpp
src/DevTools/Minimap/: Minimap.cpp  Minimap.h
src/GameEngine/: GameEngine.cpp  GameEngine.h
src/GameEngine/InputsBuffer/: InputsBuffer.h
src/GameEngine/InputsParser/: InputsParser.cpp  InputsParser.h
src/GameEngine/Managers/DoorManager/: DoorManager.cpp  DoorManager.h
src/GameEngine/Managers/EnemyManager/: EnemyManager.cpp  EnemyManager.h
src/GameEngine/Managers/EnemyManager/Enemy/: Enemy.cpp  Enemy.h
src/GameEngine/Managers/MapManager/: MapManager.cpp  MapManager.h
src/GameEngine/Managers/MapManager/MapFile/: MapFile.cpp  MapFile.h
src/GameEngine/Managers/MultimediaManager/: MultimediaManager.cpp  MultimediaManager.h
src/GameEngine/Managers/PlayerManager/: PlayerManager.cpp  PlayerManager.h
src/GameEngine/Multimedia/: Multimedia.cpp  Multimedia.h
src/GameEngine/Renderer/: Renderer.cpp  Renderer.h
src/GameEngine/State/GameState/Map/: Map.cpp  Map.h
src/GameEngine/State/GameState/Map/Tile/: Tile.cpp  Tile.h
src/GameEngine/State/GameState/Player/: Player.h
src/GameEngine/State/InputsBuffer/: InputsBuffer.h
src/GameEngine/State/WorldState/: WorldState.h
src/GameEngine/State/WorldState/Map/: Map.cpp  Map.h
src/GameEngine/State/WorldState/Map/Tile/: Tile.cpp  Tile.h
src/GameEngine/Utilities/: Conventions.h  Vec2D.h
src/GameEngine/Utilities/DDA/: DDA.cpp  DDA.h
src/GameEngine/Utilities/MapFile/: MapFile.cpp  MapFile.h
src/GameEngine/Utilities/MiscMath/: MiscMath.cpp  MiscMath.h
src/GameEngine/Utilities/Ray/: Ray.cpp  Ray.h
src/GameEngine/WorldState/Map/: Map.cpp  Map.h
src/GameEngine/WorldState/Map/Tile/: Tile.cpp  Tile.h
src/GameEngine/WorldState/Map/Tile/DoorTile/: DoorTile.cpp  DoorTile.h
src/GameEngine/WorldState/Map/Tile/EmptyTile/: EmptyTile.cpp  EmptyTile.h
src/GameEngine/WorldState/Map/Tile/EnemyContainerTile/: EnemyContainerTile.cpp  EnemyContainerTile.h
src/GameEngine/WorldState/Map/Tile/ObjectTile/: ObjectTile.cpp  ObjectTile.h
src/GameEngine/WorldState/Map/Tile/SpriteTile/: SpriteTile.cpp  SpriteTile.h
src/GameEngine/WorldState/Map/Tile/WallTile/: WallTile.cpp  WallTile.h
src/InputsParser/: InputsParser.cpp  InputsParser.h
src/Managers/: DoorManager.cpp  DoorManager.h  MapManager.cpp  MapManager.h  MultimediaManager.cpp  MultimediaManager.h  PlayerManager.h
src/Managers/DoorManager/: DoorManager.cpp  DoorManager.h
src/Managers/MapManager/: MapManager.cpp  MapManager.h
src/Managers/MultimediaManager/: MultimediaManager.cpp  MultimediaManager.h
src/Managers/PlayerManager/: PlayerManager.cpp  PlayerManager.h
src/Multimedia/: Multimedia.cpp  Multimedia.h
src/Renderer/: Renderer.h
src/State/: Inputs.h
src/State/GameData/: GameData.h
src/State/GameData/Multimedia/: Multimedia.cpp  Multimedia.h
src/State/GameData/Player/: Player.h
src/State/GameState/: GameState.h
src/State/GameState/Map/: Map.h
src/State/GameState/Player/: Player.h
src/State/Inputs/: Inputs.cpp  Inputs.h
src/State/InputsBuffer/: InputsBuffer.cpp  InputsBuffer.h
src/Utilities/: COMMON_HEADERS.h  Conventions.h  DDA.cpp  DDA.h  MiscMath.h  Ray.cpp  Vec2D.h
src/Utilities/DDA/: DDA.cpp  DDA.h
src/Utilities/MapFile/: MapFile.cpp  MapFile.h
src/Utilities/MiscMath/: MiscMath.cpp  MiscMath.h
src/Utilities/Ray/: Ray.cpp  Ray.h
utils/: MiscMath.cpp  Ray.h  (+2 more)
(+25 files in other folders)
